--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,6 +8,5 @@ p
   strong Content:
   = @post.content
 
-=> link_to 'Edit', edit_post_path(@post)
-'|
-=< link_to 'Back', posts_path
+= link_to 'Edit', edit_post_path(@post)
+= link_to 'Back', posts_path
