--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -11,5 +11,5 @@
     = f.text_field :title
   .field
     = f.label :content
-    = f.text_area :content
+    = f.rich_text_area :content
   .actions = f.submit
