--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -6,7 +6,7 @@ p
 
 p
   strong Content:
-  = @post.content
+  - @post.content
 
 = link_to 'Edit', edit_post_path(@post)
 = link_to 'Back', posts_path
